src/objects/CC_Document_Detail__c.object
<CustomObject>
    <description>Object to act as a wrapper to store the document specific wrapper details.</description>
    <fields>
        <fullName>Application_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Application_Detail__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Waiver Programs</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Application_Detail__c</referenceTo>
        <relationshipLabel>Document Details</relationshipLabel>
        <relationshipName>Document_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>CC_Application__c</referenceTo>
        <relationshipLabel>Document Details</relationshipLabel>
        <relationshipName>Document_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Type of Document being uploaded</description>
        <label>Document Type</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Comments__c</fullName>
        <label>Review Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Detail</label>
    <nameField>
        <displayFormat>DD-{000000}</displayFormat>
        <label>Document Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>